# silly-chat

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  HELP.md  README.md  backup.sh  config.toml  dev.sh  docker-compose.dev.yml  docker-compose.yml  idea.md  logs.sh  start.sh  stop.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  conversations.py  db.py  documents.py  embeddings.py  logging_setup.py  main.py  meta.py  models.py  preview.py  ratelimit.py  runtime.py  uploads.py  usage.py
backend/app/agent/: activity.py  clock.py  imagegen.py  images.py  maps.py  models_catalog.py  ollama.py  orchestrator.py  search.py  stream.py  tools.py
backend/app/auth/: crypto.py  deps.py  routes.py  security.py
backend/app/prompts/: mode_chat.md  mode_code.md  mode_images.md  mode_search.md  orchestrator.md  registry.py
backend/app/prompts/subagents/: coder.md  coder_edit.md  researcher.md  summarizer.md
backend/app/prompts/tools/: edit_image.md  find_images.md  generate_image.md  image_search.md  look.md  look_generated.md  make_document.md  research.md  search_document.md  show_map.md  vision_verify.md  web_search.md  write_code.md
backend/app/schema/: __init__.py  blocks.py  events.py  simexpr.py
backend/scripts/: acceptance_jolie.py  gen_ts_types.py  spike.py
caddy/: Caddyfile
design/: README.md  TOKENS.md  silly-chat-design.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
searxng/: settings.yml
(+55 files in other folders)
