[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "numpy>=2.5.0",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-ai-slim[openai]>=2.0.0",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "sqlmodel>=0.0.39",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
    "weasyprint>=69.0",
]
